<resources>
    <string name="app_name">Profiler</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="all_profiles">All Profiles</string>
    <string name="all_records">All Records</string>
    <string name="empty_profiles_list">No profiles to show</string>
    <string name="empty_records_list">No records to show</string>
    <string name="save">save</string>
    <string name="show_records">Show profile records</string>
    <string name="delete">delete</string>
    <string name="empty_name">Name must not be empty</string>
    <string name="empty_title">Title must not be empty</string>
    <string name="my_profile">My Profile</string>
    <string name="birthday_reminder">Birthday Reminder</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="full_name">Full Name</string>
    <string name="edit">EDIT</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="postal_address">Postal Address</string>
    <string name="interests">Interests</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="occupation">Occupation</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="profile_deletion_reassurance">Are you sure you want to delete this profile?</string>
    <string name="cancel">Cancel</string>
</resources>
