<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.create_update.CreateUpdateMyProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ffffff"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePhotoIV"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="#ffffff"
                        android:onClick="importImage"
                        android:src="@drawable/ic_person_circle_grey"
                        app:civ_border_color="#ffffff"
                        app:civ_border_width="2dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profileNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:inputType="textPersonName"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/profileBioET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_contact_phone_blue" />

                    <EditText
                        android:id="@+id/profilePhoneET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:inputType="phone"
                        android:autoLink="phone"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_cake_blue" />

                    <EditText
                        android:id="@+id/profileBirthdayET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/birthday"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_email_blue" />

                    <EditText
                        android:id="@+id/profileEmailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_location_blue" />

                    <EditText
                        android:id="@+id/profileAddressET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_address"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:inputType="textPostalAddress"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_interests" />

                    <EditText
                        android:id="@+id/profileInterestsET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interests"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_relationship_status" />

                    <EditText
                        android:id="@+id/profileRelationshipStatusET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/relationship_status"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_occupation" />

                    <EditText
                        android:id="@+id/profileOccupationET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/occupation"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/errorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:minHeight="30dp"
        android:background="#dd0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:elevation="100dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>